[FIX] web: take arrow size into account when displaying popup
Currently, the arrow of a popup is not taken into account when computing
its position resulting in an overlap with its parent element in some
cases. This commit fixes this situation.

Steps
=====
- Install module project_enterprise
- Create a project with a milestone set at the end of the current month
- Assign this milestone to a task with planned dates set
- Open the Gantt view of the project
- Hover the milestone diamond

Issue
=====
- The popup displaying the milestone name is partually overlapping the
diamond resulting in a flicker when the mouse is positioned on the left
of the diamond.

Cause
=====
Margin-bottom and margin-right are used in the style of popover. This
has no effect on the positioning of the popover that relies on left/top properties.

Fix
===
Those are replaced by negative top/left margins

task-3457106

X-original-commit: d10d38c8ff67b0912055d9cfd680d606b24aebc0

--- a/addons/web/static/src/core/popover/popover.scss
+++ b/addons/web/static/src/core/popover/popover.scss
@@ -1,7 +1,7 @@
 /*!rtl:begin:ignore*/
 .o_popover {
 	&.o-popover-top, &.o-popover-auto[x-placement^="top"] {
-		margin-bottom: 0.5rem;
+		margin-top: -0.5rem;
 	}
 
 	&.o-popover-right, &.o-popover-auto[x-placement^="right"] {
@@ -13,7 +13,7 @@
 	}
 
 	&.o-popover-left, &.o-popover-auto[x-placement^="left"] {
-		margin-right: 0.5rem;
+		margin-left: -0.5rem;
 	}
 
 	&.o-popover--ts .popover-arrow, &.o-popover--bs .popover-arrow {
